Ensure trailtext is visible on all tones in old IE

--- a/static/src/stylesheets/module/facia/item-tones/_tone-feature.scss
+++ b/static/src/stylesheets/module/facia/item-tones/_tone-feature.scss
@@ -48,6 +48,9 @@
         ul > li:before {
             background: rgba($c-headline, .4);
         }
+        @if($old-ie) {
+            color: #ffffff;
+        }
     }
 
     .fc-item__title .i {
