--- a/static/src/stylesheets/module/facia/item-tones/_tone-live.scss
+++ b/static/src/stylesheets/module/facia/item-tones/_tone-live.scss
@@ -43,6 +43,9 @@
 
     .fc-item__standfirst {
         color: fade-out($c-headline, .2);
+        @if($old-ie) {
+            color: #ffffff;
+        }
     }
 
     .fc-item__live-indicator,
